<resources>
    <string name="app_name">RoomDatabase</string>

    <!-- General -->
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="status">Status</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="undo">Undo</string>
    <string name="no_uncompleted_tasks">There are no uncompleted tasks</string>
    <string name="no_completed_tasks">There are no completed tasks</string>
    <string name="field_empty_error">This field cannot be empty</string>

    <!-- TaskUncompletedListFragment -->
    <string name="uncompleted_tasks">Uncompleted Tasks</string>
    <string name="create_task">Create Task</string>
    <string name="task_completed">Task completed</string>
    <string name="task_uncompleted">Task uncompleted</string>

    <!-- TaskCompletedListFragment -->
    <string name="completed_tasks">Completed Tasks</string>
    <string name="delete_task">Delete Task</string>
    <string name="completed_on">Completed on %1$s</string>

    <!-- TaskCreateFragment -->
    <string name="create_new_task">Create New Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="task_deadline">Task Deadline</string>

    <!-- Warnings -->
    <string name="delete_warning">Are you sure you want to delete this task?</string>
    <string name="update_warning">Are you sure you want to update this task?</string>
</resources>