<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.taskdetail.TaskDetailFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleTextInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="100" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/task_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionTextInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="1000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/statusCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/isCompletedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/isCompletedCheckbox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/isCompletedCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/taskDeadLineLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statusCard">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dateTimePickerTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/task_deadline"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/dateTimePickerLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTimePickerTextView">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/datePickerCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:contentPadding="12dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/datePickerTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/timePickerCardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:contentPadding="12dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/timePickerTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/updateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/update"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@id/deleteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskDeadLineLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/delete"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/updateButton"
        app:layout_constraintTop_toTopOf="@id/updateButton" />
</androidx.constraintlayout.widget.ConstraintLayout>